--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
         <!-- Command line argument parsing -->
         <dependency>
             <groupId>com.github.ajalt.clikt</groupId>
