--- a/src/test/resources/test-inference-workspace/services/auth-service/pom.xml
+++ b/src/test/resources/test-inference-workspace/services/auth-service/pom.xml
@@ -33,6 +33,13 @@
             <version>${kotlin.version}</version>
         </dependency>
         
+        <!-- Internal project dependency -->
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>data-lib</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
