feat: Fixed Jib build

--- a/forge/pom.xml
+++ b/forge/pom.xml
@@ -15,10 +15,14 @@
     <packaging>jar</packaging>
 
     <name>Forge</name>
-    <description>Core functionality for Forge build tool</description>
+    <description>Core functionality for Forge build tool with daemon support</description>
+    
+    <properties>
+        <main.class>com.forge.daemon.ForgeDaemonMainKt</main.class>
+    </properties>
 
     <dependencies>
-        <!-- Forge Plugin dependency -->
+        <!-- Forge Plugin API dependency -->
         <dependency>
             <groupId>com.forge</groupId>
             <artifactId>forge-plugin</artifactId>
@@ -138,6 +142,30 @@
                         <include>**/*Tests.kt</include>
                     </includes>
                 </configuration>
+            </plugin>
+            
+            <!-- Shade plugin for creating executable JAR with daemon -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <outputFile>${project.build.directory}/forge.jar</outputFile>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${main.class}</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
