--- a/forge-client/pom.xml
+++ b/forge-client/pom.xml
@@ -121,6 +121,23 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            <!-- Surefire Plugin Configuration -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <!-- Use modern systemPropertyVariables instead of deprecated systemProperties -->
+                    <systemPropertyVariables>
+                        <!-- Convert Maven's internal systemProperties to the new format -->
+                        <junit.platform.listeners.uid.tracking.enabled>true</junit.platform.listeners.uid.tracking.enabled>
+                        <junit.platform.listeners.uid.tracking.output.dir>${project.build.directory}/test-ids</junit.platform.listeners.uid.tracking.output.dir>
+                    </systemPropertyVariables>
+                    <useSystemClassLoader>true</useSystemClassLoader>
+                    <skipTests>false</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     
