--- a/forge/pom.xml
+++ b/forge/pom.xml
@@ -80,6 +80,28 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
+        <!-- OpenAPI Generator for plugin generation -->
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator</artifactId>
+            <version>7.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator-cli</artifactId>
+            <version>7.6.0</version>
+        </dependency>
+
+        <!-- Jackson for YAML/JSON parsing -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <!-- OpenTelemetry for observability -->
         <dependency>
             <groupId>io.opentelemetry</groupId>
