--- a/plugins/executors/forge-local-executor/pom.xml
+++ b/plugins/executors/forge-local-executor/pom.xml
@@ -33,6 +33,12 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
+        
+        <!-- Kotlin Coroutines -->
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
