feat: use annotations

--- a/frontseat-maven-plugin/pom.xml
+++ b/frontseat-maven-plugin/pom.xml
@@ -21,6 +21,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.frontseat</groupId>
+            <artifactId>frontseat-maven-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
         </dependency>
