--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <modules>
         <module>frontseat</module>
+        <module>frontseat-maven-commons</module>
+        <module>frontseat-spring-boot-commons</module>
         <module>frontseat-maven-plugin</module>
         <module>frontseat-spring-boot-plugin</module>
         <module>frontseat-cli</module>
